compiler/error/tests/src/unicode.waso
fn ğŸš€() {
  let x = \"âœ¨\"
}
